--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   description: testing create-react-app with backstage
   annotations:
     github.com/project-slug: Luca-Mzl/react-test
-    backstage.io/techdocs-ref: value
+    backstage.io/techdocs-ref: url:https://github.com/Luca-Mzl/react-test
 spec:
   type: website
   lifecycle: experimental
